# backend

./: pyproject.toml  requirements.txt
core/: .env
core/api/: chat.py
core/api/schema/: chat.py
core/config/: cohere.py  config.py
core/core/: settings.py  urls.py
core/data/: question_to_source_map.json
