[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Mikhail Liamets <m.liamets@jacobs-university.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.6"
django-ninja = "^0.20.0"
cohere = "^3.2.6"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
